update styles for the scrollbar and fix issue with scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,4 +18,7 @@
   -webkit-backdrop-filter: blur(20px);
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 30px;
+  max-height: calc(100vh - 100px);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
