--- a/src/app/components/errors/errors.component.scss
+++ b/src/app/components/errors/errors.component.scss
@@ -15,6 +15,7 @@
 
 .description {
   margin-bottom: 20px;
+  color: white;
 }
 
 table {
